# metasim

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  MapFetcher.cpp  MapFetcher.h  Util.cpp  Util.h
src/VirtualFS/: CMakeLists.txt  Index.cpp  Index.h
tools/: CMakeLists.txt  insertglobal_driver.cpp  map2bindex.cpp  mergewrites.cpp  readindex_driver.cpp  run_mergewrites.py  run_readindex.py  wl_generator.py
